src/app/product/product.component.scss
.details {
  padding: 1.5em;
  .product-title {
    font-size: clamp(2em, 2.5vw, 3em);
    &::before {
      content: "Sneaker Company";
      color: hsl(26, 100%, 55%);
      font-size: 0.4em;
      display: block;
      margin-bottom: 1em;
      text-transform: uppercase;
    }
  }
  p {
    opacity: 0.8;
    line-height: 1.5em;
  }
}

.increment-control,
.cart-btn {
  cursor: pointer;
}

.price-card,
.cart-controls,
.cart-btn,
.details > p {
  margin-top: 1em;
}

.price-card {
  display: flex;
  align-items: center;
  h2 {
    font-size: 1.8em;
  }
  .percent-off {
    background-color: hsl(25, 100%, 94%);

    margin-right: auto;
    margin-left: 1em;
    padding: 0.1em 0.4em;

    color: hsl(26, 100%, 55%);
    font-weight: bold;

    border-radius: 0.3em;
  }
  .total-off {
    font-weight: bold;
    opacity: 0.5;
    text-decoration: line-through;
  }
}

.cart-controls {
  margin: 1em auto;
  .controls {
    display: flex;
    justify-content: space-around;
    align-items: center;

    background-color: hsl(223, 64%, 98%);

    padding: 1em 0em;

    border-radius: 0.5em;
    input {
      background-color: transparent;
      border: none;

      width: 60%;

      text-align: center;
      font-weight: bold;
      font-size: 1em;
    }
    input::-webkit-outer-spin-button,
    input::-webkit-inner-spin-button {
      -webkit-appearance: none;
    }
  }
  .cart-btn {
    display: flex;
    align-items: center;
    justify-content: center;

    width: 100%;
    background-color: hsl(26, 100%, 55%);

    padding: 1em;

    border-radius: 0.5em;
    box-shadow: hsl(26, 100%, 55%) 0px 4px 20px;

    color: white;
    font-weight: bold;
    font-size: 1em;
    &:focus {
      outline: none;
      opacity: 0.75;
    }
    &:hover {
      opacity: 0.75;
    }
    img {
      margin-right: 1em;
    }
  }
}

@media screen and (min-width: 768px) {
  .details {
    max-width: 500px;
    padding: 0;
    margin: 3em auto;
  }
  .cart-controls {
    display: flex;
    justify-content: space-evenly;
    align-items: center;
    gap: 1em;
    .cart-btn {
      width: 70%;
      margin-top: 0;
    }
  }
}

@media screen and (min-width: 1200px) {
  .product-details {
    display: flex;
    justify-content: space-between;

    width: 100%;
    max-width: 1100px;

    margin: 6em auto;
    padding: 0em 2em;

    gap: 10%;
  }
  .details {
    display: flex;
    flex-direction: column;
    justify-content: center;

    width: 100%;

    text-align: left;
  }

  .price-card {
    flex-wrap: wrap;
    .total-off {
      display: block;
      width: 100%;
      margin-top: 0.5em;
    }
  }

  .cart-controls {
    width: 100%;
    margin-top: 2em;
  }
}

